# nix-config

./: .bash_profile  .gitconfig  .gitignore  .nvim.lua  .stow-local-ignore  .vimrc  .zshenv  .zshrc  AGENTS.md  Dockerfile  README.md  flake.nix  install.sh  uninstall.sh
.config/: mimeapps.list  tmux.conf
python/homelab-backup/: README.md  pyproject.toml
python/homelab-backup/docs/: design.md
python/homelab-backup/src/homelab_backup/: __init__.py  __main__.py  dataset_backup.py  domain.py  dst_rsync.py  dst_zfs.py  k8s.py  local_runner.py  restic.py  restic_repository.py  rsync_pull.py  src.py  src_backup_orchestrator.py  ssh_runner.py  utils.py  zfs_dataset.py  zfs_pull.py  zfs_replication.py
python/homelab-backup/src/homelab_backup/backup/: __init__.py  dataset_backup.py  restic_repository.py  src_backup_orchestrator.py  zfs_backup.py  zfs_dataset.py  zfs_native_transfer.py  zfs_rsync_transfer.py
python/homelab-backup/src/homelab_backup/cli/: __init__.py  __main__.py  _dest_rsync.py  _dest_zfs.py  _source.py  _utils.py  dest_rsync.py  dest_zfs.py  dst_rsync.py  dst_zfs.py  source.py  src.py
python/homelab-backup/src/homelab_backup/core/: __init__.py  _restic_repository.py  _zfs_dataset.py  _zfs_native_transfer.py  _zfs_rsync_transfer.py  _zfs_transfer.py  restic_repository.py  zfs_dataset.py  zfs_native_transfer.py  zfs_rsync_transfer.py
python/homelab-backup/src/homelab_backup/datasets/: zfs_dataset.py
python/homelab-backup/src/homelab_backup/execution/: __init__.py  command_runner.py  job_runner.py  local_runner.py  notifier.py  ssh_runner.py
(+473 files in other folders)
