[project]
name = "homelab-backup"
version = "0.1.0"
description = "Homelab backup"
readme = "README.md"
authors = [{ name = "Franco Ruggeri", email = "franco.ruggeri.pro@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
homelab-backup = "homelab_backup.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
strict = true
